--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -99,6 +99,6 @@
     <string name="activity_screen_subtitle">Suunnittele aktiviteetti tietyn paikan sääolosuhteiden perusteella</string>
     <string name="no_activities">Ei aktiviteetteja! Lisää yksi ensin</string>
     <string name="no_locations">Ei sijainteja! Lisää ne Sää-sivulle. Katso lisätietoja työkaluvihjeestä</string>
-    <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa.</string>
-    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatetuotteet Säävarusteiden kaupasta!</string>
+    <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa</string>
+    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
 </resources>
