feat(l10n): Add new Finnish translations and update string resources
This commit introduces new string resources and their corresponding Finnish translations.

- Adds a subtitle for the shopping screen to clarify that gear recommendations are based on activity and weather.
- Adds a message for the weather screen to prompt users to add a location.
- Includes Finnish translations for these new strings and reorders an existing string entry for consistency.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,5 +112,7 @@
     <string name="no_activities">There are no activities! Please add one first</string>
     <string name="no_locations">There are no locations! Add them in the Weather page. Check the tooltip for more information</string>
     <string name="location_tooltip">Locations are managed from the Weather page. Any locations added there will be available to use in the activity planner</string>
+    <string name="weather_screen_content_no_locations">Add a location to see the weather!</string>
+    <string name="shopping_screen_subtitle">View recommended gear based on your activity and local weather</string>
 
 </resources>
