--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -36,6 +36,8 @@
     <string name="add_activity_prompt">Kirjoita uuden aktiviteetin nimi…</string>
     <string name="confirm_button_label">Vahvistaa</string>
     <string name="cancel_button_label">Peruuttaa</string>
+    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
+
 
     <string name="shop_message_card_button_text">Mene kauppaan</string>
     <string name="history_screen_title">Aktiiviteetti historia</string>
@@ -79,6 +81,7 @@
     <string name="shopping_screen_all_items_section_title">Kaikki tuotteet</string>
     <string name="shopping_screen_product_image_description">Tuotekuva: %1$s</string>
     <string name="shopping_screen_view_listing_button">Katso tuote</string>
+    <string name="shopping_screen_subtitle">Katso suositellut varusteet aktiviteettisi ja paikallisen sään perusteella</string>
 
     <string name="weather_screen_weather_detail_humidity">Kosteus</string>
     <string name="weather_screen_weather_detail_wind_speed">Tuulen nopeus</string>
@@ -93,6 +96,8 @@
     <string name="weather_screen_search_bar_location_icon_description">Käytä nykyistä sijaintia</string>
     <string name="weather_screen_gps_icon_description">Nykyinen sijainti</string>
     <string name="weather_screen_remove_location_description">Poista sijainti</string>
+    <string name="weather_screen_content_no_locations">Lisää sijainti nähdäksesi sää!</string>
+
     <string name="widget_no_data">Ei tietoja</string>
     <string name="widget_tap_to_open">Avaa napauttamalla</string>
     <string name="widget_description">Näyttää nykyisen säätilan tallennetulle sijainnille</string>
@@ -100,5 +105,4 @@
     <string name="no_activities">Ei aktiviteetteja! Lisää yksi ensin</string>
     <string name="no_locations">Ei sijainteja! Lisää ne Sää-sivulle. Katso lisätietoja työkaluvihjeestä</string>
     <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa</string>
-    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
 </resources>
