132 fix lint issues and apply minor general fixes (#134)
* feat(l10n): Add new Finnish translations and update string resources

This commit introduces new string resources and their corresponding Finnish translations.

- Adds a subtitle for the shopping screen to clarify that gear recommendations are based on activity and weather.
- Adds a message for the weather screen to prompt users to add a location.
- Includes Finnish translations for these new strings and reorders an existing string entry for consistency.

* refactor(weather): Simplify weather data models and mappers

This commit refactors the weather data models and DTOs by removing unused fields and simplifying the overall structure. It also updates the weather data mapper to correctly handle timezones.

Key changes:
- Moves weather-related domain and DTO models into a `components` sub-package for better organization.
- Deletes several unused weather data models and their corresponding DTOs, including `Clouds`, `Coord`, `Rain`, `ForecastSys`, and `PartOfDay`.
- Simplifies `WeatherResponse`, `ForecastResponse`, and `ForecastItem` models by removing now-unused fields.
- Converts DTO extension functions (`toDomain()`) into methods within their respective DTO classes for improved encapsulation.
- Updates `WeatherMappers` to use the location's specific timezone when formatting sunrise, sunset, and daily forecast times, ensuring accurate time display.
- Refactors related repository implementations and tests to align with the new data model structure.

* test(activity): Scroll to AI answer sections in UI test

In `ActivityScreenTest`, updated the `testAiAnswerRendersCorrectly` test to scroll to each AI-generated content section (`Suitability`, `Weather Tips`, `Clothing Tips`) before asserting that it is displayed. This ensures the test passes on smaller screens where content may be off-screen and require scrolling.

* refactor(search): Delete unused SearchScreen

The `SearchScreen.kt` file, along with the `SearchS

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -36,6 +36,8 @@
     <string name="add_activity_prompt">Kirjoita uuden aktiviteetin nimi…</string>
     <string name="confirm_button_label">Vahvistaa</string>
     <string name="cancel_button_label">Peruuttaa</string>
+    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
+
 
     <string name="shop_message_card_button_text">Mene kauppaan</string>
     <string name="history_screen_title">Aktiiviteetti historia</string>
@@ -79,20 +81,23 @@
     <string name="shopping_screen_all_items_section_title">Kaikki tuotteet</string>
     <string name="shopping_screen_product_image_description">Tuotekuva: %1$s</string>
     <string name="shopping_screen_view_listing_button">Katso tuote</string>
+    <string name="shopping_screen_subtitle">Katso suositellut varusteet aktiviteettisi ja paikallisen sään perusteella</string>
 
-    <string name="weather_screen_weather_detail_humidity">Kosteus</string>
-    <string name="weather_screen_weather_detail_wind_speed">Tuulen nopeus</string>
-    <string name="weather_screen_weather_detail_visibility">Näkyvyys</string>
-    <string name="weather_screen_weather_detail_title">Säätiedot</string>
-    <string name="weather_screen_weather_detail_pressure">Paine</string>
+    <string name="weather_screen_detail_humidity">Kosteus</string>
+    <string name="weather_screen_detail_wind_speed">Tuulen nopeus</string>
+    <string name="weather_screen_detail_visibility">Näkyvyys</string>
+    <string name="weather_screen_detail_title">Säätiedot</string>
+    <string name="weather_screen_detail_pressure">Paine</string>
     <string name="weather_screen_weather_detail_sunrise">Auringonnousu</string>
     <string name="weather_screen_weather_detail_sunset">Auringonlasku</string>
     <string name="weather_screen_weather_detail_five_day_forecast">5 päivän ennuste</string>
     <string name="weather_screen_search_bar_hint">Hae kaupunkia tai sijaintia</string>
     <string name="weather_screen_search_bar_icon_description">Hae</string>
-    <string name="weather_screen_search_bar_location_icon_description">Käytä nykyistä sijaintia</string>
+    <string name="weather_search_bar_location_icon_description">Käytä nykyistä sijaintia</string>
     <string name="weather_screen_gps_icon_description">Nykyinen sijainti</string>
     <string name="weather_screen_remove_location_description">Poista sijainti</string>
+    <string name="weather_screen_content_no_locations">Lisää sijainti nähdäksesi sää!</string>
+
     <string name="widget_no_data">Ei tietoja</string>
     <string name="widget_tap_to_open">Avaa napauttamalla</string>
     <string name="widget_description">Näyttää nykyisen säätilan tallennetulle sijainnille</string>
@@ -100,5 +105,4 @@
     <string name="no_activities">Ei aktiviteetteja! Lisää yksi ensin</string>
     <string name="no_locations">Ei sijainteja! Lisää ne Sää-sivulle. Katso lisätietoja työkaluvihjeestä</string>
     <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa</string>
-    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
 </resources>
