feat(history): Display message when history is empty
- Adds a message to the History screen that is displayed when there is no activity history.
- Implements conditional logic in `HistoryScreen.kt` to show the message instead of the `LazyColumn` when the list of history items is empty.
- Adds new string resources for the empty state message in both English (`strings.xml`) and Finnish (`values-fi/strings.xml`).

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -42,6 +42,7 @@
     <string name="shop_message_card_button_text">Mene kauppaan</string>
     <string name="history_screen_title">Aktiiviteetti historia</string>
     <string name="history_screen_view_previous_activity_search">Tarkastele aiempia aktiivisuus hakuja ja ehtoja</string>
+    <string name="history_screen_no_history">Ei historiaa. Suunnittele aktiviteetti nähdäksesi se täällä.</string>
 
     <string name="search_screen_content_label">Hae</string>
     <string name="search_screen_content_suggestions">Ehdotukset</string>
