--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,5 @@
     <string name="weather_screen_content_no_locations">Add a location to see the weather!</string>
     <string name="shopping_screen_subtitle">View recommended gear based on your activity and local weather</string>
     <string name="history_screen_no_history">No history yet. Plan an activity to see it here.</string>
+    <string name="search_screen_content_recent">Recent</string>
 </resources>
