Chore/finalize project (#138)
* Add API key docs

* Update README.md to fix issues

* Reformat README.md tables

* Remove unused files

* Remove unused resource strings

* Update SDK version

* Update project files to remove warnings and fix issues

* Update README.md to match current project schema

* Add missing resource strings

* Update resource string keys for consistency and reusability

* Update project files to use new resource string keys

* docs: Add eBay API key generation instructions

Adds a new markdown document, `ebay-apikey-instructions.md`, that provides a step-by-step guide for generating and configuring the necessary eBay API key.

The guide covers:
- Creating an eBay Developer account.
- Generating production application keys (Client ID and Client Secret).
- Creating the Base64 encoded basic authentication key.
- Configuring the key in the project's `local.properties` file.

* currencyAPI apikey instructions

* add currencyAPI API key generation instructions

* updated currencyAPI API key generation instructions

* Add OpenWeatherMap API key instructions

* Remove log statements from ActivityViewModel and improve error handling

* refactor(test): Clean up and simplify tests

This commit refactors various unit and UI tests to improve clarity, correctness, and maintainability.

*   Removes commented-out code blocks (`// Given`, `// When`, `// Then` and `// Arrange`, `// Act`, `// Assert`) from tests for a cleaner structure.
*   Simplifies assertions by using direct imports of JUnit and MockK functions (`assertEquals`, `assertFalse`, `assertTrue`) instead of wildcard imports.
*   Replaces hardcoded strings in UI tests (`WeatherComponentsTest`, `SettingsScreenTest`) with string resources for better localization and maintainability.
*   Removes the unused `Application` dependency from `HistoryViewModel` and its corresponding test.
*   Fixes date and time formatting assertions in `HistoryViewModelTest` to be dynamic and locale-independent.
*   Removes 

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">WeatherApp</string>
-
-    <string name="nav_search">Hae</string>
-    <string name="nav_weather">Sää</string>
-    <string name="nav_activity">Aktiviteetti</string>
-    <string name="nav_shopping">Shoppaile</string>
-    <string name="nav_settings">Asetukset</string>
-    <string name="nav_history">Historia</string>
-
+    <string name="weather">Sää</string>
+    <string name="activity">Aktiviteetti</string>
+    <string name="shopping">Shoppaile</string>
+    <string name="settings">Asetukset</string>
+    <string name="history">Historia</string>
     <string name="button_primary">Ensisijainen nappi</string>
     <string name="button_secondary">Toissijainen nappi</string>
-    <string name="button_disabled">Pois käytöstä</string>
-
-    <string name="activity_screen_title">Aktiviteetti suunnittelija</string>
+    <string name="disabled">Pois käytöstä</string>
+    <string name="activity_planner">Aktiviteetti suunnittelija</string>
     <string name="activity_label">Valitse aktiviteetti</string>
     <string name="activity_prompt">Valitse aktiviteetti…</string>
-    <string name="start_time_label">Valitse aloituspäivämäärä</string>
-    <string name="activity_screen_end_date_label">Valitse päättymispäivä</string>
-    <string name="activity_screen_start_time_label">Valitse aloitus aika</string>
+    <string name="start_date_label">Valitse aloituspäivämäärä</string>
+    <string name="end_date_label">Valitse päättymispäivä</string>
+    <string name="start_time_label">Valitse aloitus aika</string>
     <string name="end_time_label">Valitse lopetus aika</string>
-    <string name="time_prompt">Valitse aika…</string>
-    <string name="search_button_label">Hae</string>
+    <string name="search">Hae</string>
     <string name="location_label">Valitse sijainti</string>
     <string name="location_prompt">Valitse sijainti…</string>
     <string name="time_error_adjusted">Päättymisaika säädettiin automaattisesti.</string>
@@ -30,80 +25,63 @@
     <string name="suitability">Soveltuvuus</string>
     <string name="weather_tips">Säävinkkejä</string>
     <string name="clothing_tips">Pukeutumis vinkkejä</string>
-    <string name="hide_options">Piilota vaihtoehdot</string>
-    <string name="show_options">Näytä vaihtoehdot</string>
-    <string name="add_activity_title">Lisää aktiviteetti</string>
+    <string name="add_activity">Lisää aktiviteetti</string>
     <string name="add_activity_prompt">Kirjoita uuden aktiviteetin nimi…</string>
-    <string name="confirm_button_label">Vahvistaa</string>
-    <string name="cancel_button_label">Peruuttaa</string>
-    <string name="shop_message_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
-
-
-    <string name="shop_message_card_button_text">Mene kauppaan</string>
-    <string name="history_screen_title">Aktiiviteetti historia</string>
-    <string name="history_screen_view_previous_activity_search">Tarkastele aiempia aktiivisuus hakuja ja ehtoja</string>
-    <string name="history_screen_no_history">Ei historiaa. Suunnittele aktiviteetti nähdäksesi se täällä.</string>
-
-    <string name="search_screen_content_label">Hae</string>
-    <string name="search_screen_content_suggestions">Ehdotukset</string>
-    <string name="search_screen_content_recent">Nykyiset</string>
-    <string name="search_screen_history_row_button">Poista</string>
-
-    <string name="settings_screen_title">Asetukset</string>
-    <string name="settings_screen_section_header_general">Yleiset</string>
-    <string name="settings_screen_language_title">Kieli</string>
-    <string name="settings_screen_language_dialog_title">Valitse kieli</string>
-    <string name="settings_screen_app_theme_title">Sovelluksen teema</string>
+    <string name="confirm">Vahvistaa</string>
+    <string name="cancel">Peruuttaa</string>
+    <string name="shop_card_description">Klikkaa alta nähdäksesi suositellut vaatekappaleet aktiviteettiin Ostokset-sivulla</string>
+    <string name="go_to_shop">Mene kauppaan</string>
+    <string name="activity_history">Aktiiviteetti historia</string>
+    <string name="view_previous_activity_search">Tarkastele aiempia aktiivisuus hakuja ja ehtoja</string>
+    <string name="no_activity_history">Ei historiaa. Suunnittele aktiviteetti nähdäksesi se täällä.</string>
+    <string name="general">Yleiset</string>
+    <string name="language">Kieli</string>
+    <string name="select_language">Valitse kieli</string>
+    <string name="app_theme">Sovelluksen teema</string>
     <string name="no_matches_found">Osumia ei löytynyt</string>
-    <string name="settings_screen_currency">Valuutta</string>
-    <string name="settings_screen_select_currency">Valitse valuutta</string>
-    <string name="settings_screen_dialog_dismiss_button">Hylkää</string>
-    <string name="settings_screen_section_header_units">Yksiköt</string>
-    <string name="settings_screen_unit_item_title">Yksikköjärjestelmä</string>
-    <string name="settings_screen_dialog_confirm_button">OK</string>
-    <string name="settings_screen_unit_dialog_title">Valitse yksikköjärjestelmä</string>
-    <string name="settings_screen_navigate_icon">Siirry asetukseen</string>
-    <string name="settings_screen_language_icon">Kieli asetus</string>
-    <string name="settings_screen_app_theme_icon">Sovelluksen teema asetus</string>
-    <string name="settings_screen_currency_icon">Valuutta asetus</string>
-    <string name="settings_screen_unit_icon">Lämpötilan yksikkö asetus</string>
-    <string name="settings_screen_app_theme_dialog_title">Valitse sovelluksen teema</string>
-    <string name="settings_screen_app_theme_light">Vaalea teema</string>
-    <string name="settings_screen_app_theme_dark">Tumma teema</string>
-    <string name="settings_screen_app_theme_system">Käytä laitteen teemaa</string>
-    <string name="settings_screen_unit_metric">Metrijärjestelmä (°C)</string>
-    <string name="settings_screen_unit_imperial">Brittiläinen järjestelmä (°F)</string>
-    <string name="settings_screen_currency_usd">US Dollari ($)</string>
-    <string name="settings_screen_currency_eur">Euro (€)</string>
-    <string name="settings_screen_currency_gbp">Britti Punta (£)</string>
-
-    <string name="shopping_screen_title">Säävarusteiden kauppa</string>
-    <string name="shopping_screen_recommended_items_section_title">Suositellaan nykyiseen säähän</string>
-    <string name="shopping_screen_all_items_section_title">Kaikki tuotteet</string>
-    <string name="shopping_screen_product_image_description">Tuotekuva: %1$s</string>
-    <string name="shopping_screen_view_listing_button">Katso tuote</string>
+    <string name="currency">Valuutta</string>
+    <string name="select_currency">Valitse valuutta</string>
+    <string name="units">Yksiköt</string>
+    <string name="unit_system">Yksikköjärjestelmä</string>
+    <string name="select_unit_system">Valitse yksikköjärjestelmä</string>
+    <string name="language_setting">Kieli asetus</string>
+    <string name="app_theme_setting">Sovelluksen teema asetus</string>
+    <string name="currency_setting">Valuutta asetus</string>
+    <string name="temperature_unit_setting">Lämpötilan yksikkö asetus</string>
+    <string name="select_app_theme">Valitse sovelluksen teema</string>
+    <string name="light_theme">Vaalea teema</string>
+    <string name="dark_theme">Tumma teema</string>
+    <string name="use_device_theme">Käytä laitteen teemaa</string>
+    <string name="unit_metric">Metrijärjestelmä (°C)</string>
+    <string name="unit_imperial">Brittiläinen järjestelmä (°F)</string>
+    <string name="currency_usd">US Dollari ($)</string>
+    <string name="currency_eur">Euro (€)</string>
+    <string name="currency_gbp">Britti Punta (£)</string>
+    <string name="weather_gear_shop">Säävarusteiden kauppa</string>
+    <string name="recommended_weather_items">Suositellaan nykyiseen säähän</string>
+    <string name="all_items">Kaikki tuotteet</string>
+    <string name="product_image_for">Tuotekuva: %1$s</string>
+    <string name="view_items">Katso tuote</string>
     <string name="shopping_screen_subtitle">Katso suositellut varusteet aktiviteettisi ja paikallisen sään perusteella</string>
-
-    <string name="weather_screen_detail_humidity">Kosteus</string>
-    <string name="weather_screen_detail_wind_speed">Tuulen nopeus</string>
-    <string name="weather_screen_detail_visibility">Näkyvyys</string>
-    <string name="weather_screen_detail_title">Säätiedot</string>
-    <string name="weather_screen_detail_pressure">Paine</string>
-    <string name="weather_screen_weather_detail_sunrise">Auringonnousu</string>
-    <string name="weather_screen_weather_detail_sunset">Auringonlasku</string>
-    <string name="weather_screen_weather_detail_five_day_forecast">5 päivän ennuste</string>
-    <string name="weather_screen_search_bar_hint">Hae kaupunkia tai sijaintia</string>
-    <string name="weather_screen_search_bar_icon_description">Hae</string>
-    <string name="weather_search_bar_location_icon_description">Käytä nykyistä sijaintia</string>
-    <string name="weather_screen_gps_icon_description">Nykyinen sijainti</string>
-    <string name="weather_screen_remove_location_description">Poista sijainti</string>
-    <string name="weather_screen_content_no_locations">Lisää sijainti nähdäksesi sää!</string>
-
-    <string name="widget_no_data">Ei tietoja</string>
-    <string name="widget_tap_to_open">Avaa napauttamalla</string>
+    <string name="humidity">Kosteus</string>
+    <string name="wind_speed">Tuulen nopeus</string>
+    <string name="visibility">Näkyvyys</string>
+    <string name="weather_details">Säätiedot</string>
+    <string name="pressure">Paine</string>
+    <string name="sunrise">Auringonnousu</string>
+    <string name="sunset">Auringonlasku</string>
+    <string name="five_day_forecast">5 päivän ennuste</string>
+    <string name="search_city_or_location">Hae kaupunkia tai sijaintia</string>
+    <string name="use_current_location">Käytä nykyistä sijaintia</string>
+    <string name="current_location">Nykyinen sijainti</string>
+    <string name="remove_location">Poista sijainti</string>
+    <string name="add_location_for_weather">Lisää sijainti nähdäksesi sää!</string>
+    <string name="no_data">Ei tietoja</string>
+    <string name="tap_to_open_app">Avaa napauttamalla</string>
     <string name="widget_description">Näyttää nykyisen säätilan tallennetulle sijainnille</string>
     <string name="activity_screen_subtitle">Suunnittele aktiviteetti tietyn paikan sääolosuhteiden perusteella</string>
     <string name="no_activities">Ei aktiviteetteja! Lisää yksi ensin</string>
     <string name="no_locations">Ei sijainteja! Lisää ne Sää-sivulle. Katso lisätietoja työkaluvihjeestä</string>
     <string name="location_tooltip">Sijainnit hallitaan Sää-sivulta. Kaikki sinne lisätyt sijainnit ovat käytettävissä aktiviteettien suunnittelussa</string>
+    <string name="recent">Nykyiset</string>
 </resources>
